# zero2prod

./: Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
.github/workflows/: audit-on-push.yml  audit.yml  fly-deploy.yaml  general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
