[package]
name = "zero2prod"
authors = ["Josh Buckland <josh.russell.buckland@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = { version = "0.15", default-features = false, features = ["yaml"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
unicode-segmentation = "1"
validator = "0.19"
anyhow = "1"
serde_json = "1.0.134"

[dev-dependencies]
once_cell = "1"
sqlx-cli = { version = "0.8", default-features = false, features = [
  "rustls",
  "postgres",
] }
claims = "0.8"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8"
wiremock = "0.6.2"
